--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,44 @@
-<!-- Navigation -->
+<section id="cta" class="parallax-5">
+       <div class="overlay"></div>
+         
+         <div class="page-fill">
 
-<div class="jumbotron-main">
-    <span>
+         </div>
+           <div class="page-whatis">
+             {{!-- <header class="what-is-header"> --}}
+                <h1 class="main-h1"> A new approach <br>to finding clinical trials. 
+                    {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a> --}}
+                </h1> 
+             {{!-- </header> --}}
+                
+           </div>
+         
+</section>
+<div class="row" style="background-color: white; opacity: 1">
+    <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+    <br>
+    <img src="http://www.med.unc.edu/psych/images/pubmed.png/@@images/b85fdbbf-a467-4280-8441-4b13c8c9f82d.png" style="height: 150px; width: 250px; padding-top: 20px; margin-top: 30px">    
+    </div>
+    <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+    <br>
+    <img src="https://clinicaltrials.gov/apple-touch-icon-144x144.png" style="height: 150px; width: 250px; padding-top: 20px; margin-top: 30px">    
+    </div>
+    <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+    <br>
+    <img src="http://aboutclinicaltrialsgov.lillycoi.com/img/NLM.svg" style="height: 150px; width: 250px; padding-top: 20px; margin-top: 30px">    
+    </div>
     
-        <h1 class="main-h1"> A new approach <br>to finding clinical trials. 
-            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a> --}}
-        </h1> 
-        <h1 class="main-h1-2">  
-            {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a> --}}
-        </h1> 
-        
-        
-    </span>
-</div>
+    
+    
+</div><br><br><br>
+ 
                 <section id="cta" class="parallax">
                        <div class="overlay"></div>
                        {{!-- <div class="container"> --}}
                          
-                         
+                         <div class="page-fill">
+
+                         </div>
                            <div class="page-whatis">
                              <header class="what-is-header">
                              <h2 class="what-is-h2">What is Cesarcells.com?</h2>
@@ -38,12 +59,27 @@
                          <!-- /.row-->
                        {{!-- </div> <!-- /.container--> --}}
                      </section>
-
+                    <div class="row" style="background-color: white; opacity: 1">
+                        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+                        <br>
+                        
+                        </div>
+                        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+                        <br>
+                           
+                        </div>
+                        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+                        <br>
+                          
+                        </div>
+                        
+                        
+                        
+                    </div><br><br><br>
     <A name="how-it-work-main"></A>
 
     <section id="cta" class="parallax-2">
         <div class="overlay"></div>
-        <div class="space-taker"></div>
             <div class="page-whatis">
 
                         <header class="how-it-header">
@@ -63,9 +99,26 @@
 
                     
             </div>
+        <div class="space-taker"></div>
 
     </section>
-
+    <div class="row" style="background-color: white; opacity: 1">
+        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+        <br>
+        
+        </div>
+        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+        <br>
+           
+        </div>
+        <div class="col-md-4" style="text-align: center; opacity: 1; height: 50%">
+        <br>
+          
+        </div>
+        
+        
+        
+    </div><br><br><br>
 <div id="spopup" style="display: none;">
     <!--close button-->
     <a style="position:absolute;top:14px;right:10px;color:#555;font-size:10px;font-weight:bold;" href="javascript:void(0);" onclick="return closeSPopup();">
@@ -148,49 +201,49 @@
                          <div class="row">
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">STEMCELL</h2>
+                             <img src="https://www.osc-ortho.com/wp-content/uploads/2016/02/stem-cells-icon.png">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">EXPERIMENTAL DRUG</h2>
+                             <img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/simple-red-square-icons-signs/129488-simple-red-square-icon-signs-prescription1.png">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">BIO-TECH</h2>
+                             <img src="http://biotechprimer.com/wp-content/uploads/2014/10/Icon-Biotechnology.png" style="height: 250px; width: 250px">
                              </div>
                              <div class="col-md-3">
                              <h2 class="avail-trials-h2">GENETIC</h2>
+                             <img src="https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/biotech.png" style="height: 250px; width: 250px">
                              </div>
                          </div><br><br><br>
                          
                          <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p>
-                           <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
+                         {{!--   <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a> --}}
            
                 </header>
             </div>
     </section>
-    {{!-- <section id="treatments" class="treatments-section">
-        <header class="what-is-header">
-            <h2 class="trial-main-h2">Available Trials</h2>
-        </header>
+    {{!-- <div class="row">
+        <div class="col-md-6">
+        <h1 class="avail-trials-h1">STEMCELL</h1>
+        <img src="https://www.osc-ortho.com/wp-content/uploads/2016/02/stem-cells-icon.png">
+        </div>
         
-        <div class="row">
-            <div class="col-md-3">
-            <h2 class="avail-trials-h2">STEMCELL</h2>
-            </div>
-            <div class="col-md-3">
-            <h2 class="avail-trials-h2">EXPERIMENTAL DRUG</h2>
-            </div>
-            <div class="col-md-3">
-            <h2 class="avail-trials-h2">BIO-TECH</h2>
-            </div>
-            <div class="col-md-3">
-            <h2 class="avail-trials-h2">GENETIC</h2>
-            </div>
-        </div><br><br><br>
+        <div class="col-md-6">
+        <h2 class="avail-trials-h2">BIO-TECH</h2>
+        <img src="http://biotechprimer.com/wp-content/uploads/2014/10/Icon-Biotechnology.png" style="height: 250px; width: 250px">
+        </div>
         
-        <p class="what-is-sci"><strong>Register to find a trial right for you. It's completely free!</strong></p>
-          <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">Register Now</a>
-    </section>
-  </div>
-</div>
-</section>
- --}}
+    </div> --}}
+    <br><br><br>
+    <div class="row" style="background-color: white">
+        <div class="col-md-12" style="text-align: center; opacity: 1; height: 50%">
+        <h1 class="avail-trials-h1">Get Started Finding Your Treatment Now</h1>
+       <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a>
+      
+        </div>
+        
+        
+        
+    </div><br><br><br>
 
