--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -4,8 +4,9 @@
     <div>
 <div>
  <div class="row">
+  <div class="col-md-1"></div>
      <div class="col-md-9">
-         <h1 class="browse-trials-h2" style="text-align: center; color: midnightblue; margin-top: 80px">BROWSE TRIALS</h1><br>
+         <h1 class="browse-trials-h2" style="text-align: center; color: midnightblue; margin-top: 130px">BROWSE TRIALS</h1><br>
              <table id="gene-table" class="table table-hover" cellspacing="1">
                <thead>
                  <tr>
