--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -13,7 +13,7 @@
 
         <a href="/users/view-results">
 
-        <img src="https://d3ui957tjb5bqd.cloudfront.net/images/screenshots/products/12/121/121104/flaticons15-pr-f.jpg?1401654621" class="img-rounded" alt="Cinque Terre" width="500" height="298" id="img-dash3"/>
+        <img src="http://cdn.theatlantic.com/assets/media/img/posts/2013/11/Screen_Shot_2013_11_25_at_3.55.49_PM/10d8d9a5c.png" class="img-rounded" alt="Cinque Terre" width="500" height="298" id="img-dash3"/>
         <h3><span>YOUR RESULTS</span></h3>
         </a>
         </div>
@@ -23,7 +23,7 @@
             </div>
             {{#unless assessmentTaken}}
             <a href="/tools/start-health-assessment">
-            <img src="http://feelgrafix.com/data_images/out/20/930465-dna.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
+            <img src="https://s.graphiq.com/sites/default/files/2307/media/images/Twitter_Blue_1409382.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash"/>
             <h3><span>Take The Clinical Trial <br>Assessment</span></h3>
             </a>
             {{/unless}}
@@ -31,14 +31,14 @@
             {{#if assessmentTaken}}
 
             <a href="#">
-            <img src="http://feelgrafix.com/data_images/out/20/930465-dna.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash" style="-webkit-filter: grayscale(100%); filter: grayscale(100%)" />
+            <img src="https://s.graphiq.com/sites/default/files/2307/media/images/Twitter_Blue_1409382.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash" style="-webkit-filter: grayscale(100%); filter: grayscale(100%)" />
             <h3><span>Take The Clinical Trial <br>Assessment</span></h3>
             </a>
             {{/if}}
 
-            <a href="/tools/genetic">
-            <img src="http://p6.zdassets.com/hc/settings_assets/110137/200071170/BRAvBoNT6M0Je9RDM5XioQ-B8RxjraWdnSXCzvGLrn68Q-icn_logo_retina.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
-            <h3 id="top-right-h3"><spanid="top-right-span">Import Your 23andme Genetic Data</span></h3>
+            <a href="/tools/discuss">
+            <img src="https://vacandlesupply.com/product-images/Blue%20Soap%20Dye.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
+            <h3 id="top-right-h3"><spanid="top-right-span">Discussion</span></h3>
             </a>
         </div>
     </div>
@@ -49,12 +49,12 @@
         <div class="col-md-6" id="col-two-dash-images"> 
             <a href="/tools/amsler-test">
 
-            <img src="http://www.snowmyna.com/wp-content/uploads/2014/08/AMD-Amsler-Grid-288x300.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
+            <img src="http://www.beautycolorcode.com/66b7e1-336x280.png" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash3"/>
             <h3><span>Take the Amsler Test</span></h3>
             </a>
 
             <a href="/tools/all-trials">
-            <img src="http://flexogenix.com/wp-content/uploads/2015/01/16.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
+            <img src="https://images-na.ssl-images-amazon.com/images/I/31K9TPCCM8L.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash4"/>
             <h3 id="top-right-h3"><spanid="top-right-span">Search For Trials</span></h3>
             </a>
         </div>
