--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -32,8 +32,8 @@
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-                {{!-- <li><a href="/tools/genetic">23AndMe SNP Table</a></li> --}}
-                {{!-- <li role="separator" class="divider"></li> --}}
+                <li><a href="/tools/genetic">23AndMe SNP Table</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
