--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -36,7 +36,7 @@
             </a>
             {{/if}}
 
-            <a href="/tools/discuss">
+            <a href="/chat/discuss">
             <img src="https://vacandlesupply.com/product-images/Blue%20Soap%20Dye.jpg" class="img-rounded" alt="Cinque Terre" width="304" height="206" id="img-dash2">
             <h3 id="top-right-h3"><spanid="top-right-span">Discussion</span></h3>
             </a>
