--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -4,24 +4,10 @@
 <br>
 <br>
 
-<a href="https://api.23andme.com/authorize/?redirect_uri=http://localhost:3000/receive_code/&response_type=code&client_id=dd6b7f51cb19ee4bd93bfe59438f7956&scope=rs2476601"><img src="/assets/images/23andMe.png"/> </a>
+{{!-- <a href="https://api.23andme.com/authorize/?redirect_uri=http://localhost:3000/receive_code/&response_type=code&client_id=dd6b7f51cb19ee4bd93bfe59438f7956&scope=basic rs3094315"><img src="/assets/images/23andMe.png"/> </a> --}}
 
 
-<script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
-<div id="wrapper">Loading...</div>
-<script>
-    window.onload = function () {
-        var ttam = TTAM('dd6b7f51cb19ee4bd93bfe59438f7956');
-        ttam.snpTable('wrapper', 'rs2476601', {
-            AA: 'Moderately higher odds of developing hypothyroidism.',
-            AG: 'Slightly higher odds of developing hypothyroidism.',
-            GG: 'Typical odds of developing hypothyroidism.',
-            order: 'AA,AG,GG'
-        }, {
-            width: 450
-        });
-    };
-</script>
 
+<a href="/auth"><img src="/assets/images/23andMe.png"/> </a>
 
 
