sorted through SNPs

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,13 +17,13 @@
 <div style="background-color: transparent; opacity: 1; width: 100%; height: 5%">
     <div class="col-md-12" style="text-align: center; opacity: 1">
     {{!-- <br> --}}
-    <img src="http://www.med.unc.edu/psych/images/pubmed.png/@@images/b85fdbbf-a467-4280-8441-4b13c8c9f82d.png" style="height: 80px; width: 150px; padding-top: 20px; margin-left: 30px margin-top: 30px"> 
+   {{!--  <img src="http://www.med.unc.edu/psych/images/pubmed.png/@@images/b85fdbbf-a467-4280-8441-4b13c8c9f82d.png" style="height: 80px; width: 150px; padding-top: 20px; margin-left: 30px margin-top: 30px"> 
 
     <img src="http://aboutclinicaltrialsgov.lillycoi.com/img/NLM.svg" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px; margin-top: 20px">    
 
     <img src="https://clinicaltrials.gov/apple-touch-icon-144x144.png" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px;  margin-top: 20px"> 
 
-    <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/23andMe_logo.svg/2000px-23andMe_logo.svg.png" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px;  margin-top: 20px">
+    <img src=" https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/23andMe_logo.svg/2000px-23andMe_logo.svg.png" style="height: 110px; width: 150px; padding-top: 20px; margin-left: 30px;  margin-top: 20px"> --}}
 
     </div>
 
