data displays on pagegit add .

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -25,7 +25,8 @@
                 <li><a href="/users/stargardt-disease-registry">Stargardt Disease Registry</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/users/my-appointments">Appointments</a></li>
-             
+                <li role="separator" class="divider"></li>
+                <li><a href="/tools/genetic-data-retinal-diseases">My Genetics</a></li>
               </ul>
             </li>
             <li class="dropdown">
