--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
 <script src="https://api.23andme.com/res/js/ttam-0.3.js"></script>
 <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 {{!-- <link rel="stylesheet" href="http://s.mlcdn.co/animate.css"> --}}
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
 </head>
 
