--- a/views/users/dashboard.handlebars
+++ b/views/users/dashboard.handlebars
@@ -1,3 +1,4 @@
+
     <div class="row" id="row-top-dash-images">
  
         {{#if successFlash}}
@@ -61,7 +62,9 @@
     </div>
    <div class="row" id="main-row-sect">
        <div class="container-lg">
-           
-       <div>
+{{!--            <canvas width="1600px" height="1000"></canvas>
+ --}}       <div>
    <div>
+
+   
     
