--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,23 @@ h3 {
     margin-top: 15px;
 
 }
+.pipeline-chart {
+    margin: 4.875em auto 2.8125em 100px;
+    padding: 4.8em 0;
+    background: white;
+    border: 1px solid #D6D6D6;
+    border-radius: 5px;
+    max-width: 100%;
+    box-sizing: border-box;
+}
+.content-inner {
+    width: 84%;
+    margin: 0 auto;
+}
+.pipeline-chart .chart {
+    position: relative;
+    margin-top: 10em;
+    }
 ul.shortcuts li {
     display: inline-block;
     margin: 0.5em;
@@ -323,6 +340,13 @@ pre {
     background-size: cover;
     height: 60%;
 }
+.jumbotron-my-genetics {
+
+    background-image: url("http://www.stemcentrx.com/img/header_our_science.png");
+    background-size: cover;
+    height: 30%;
+
+}
 .jumbotron-assist-tech {
 
     background-image: url("http://www.stemcentrx.com/img/clinical-bg.png");
@@ -384,6 +408,21 @@ pre {
     font-weight: bold;
     margin-top: 0;
      
+}
+#genetic-ring {
+    height: 500px;
+    width: 500px
+}
+.genetics-h1 {
+    padding-top: 75px;
+    font-family: "effra", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 65px;
+    text-align: center;
+    line-height: 1.3;
+    color: white;
+    width: 100%;
+    font-weight: bold;
+    margin-top: 0;
 }
 .main-h1-2 {
     padding-top: 155px;
@@ -1037,6 +1076,19 @@ ul.dropdown-menu {
 #gene-table {
     margin-left: 100px;
     width: 80%;
+}
+#snps-table {
+    margin-top: 100px;
+    width: 100%;
+    /*background-color: whitesmoke;*/
+
+}
+/*#snps-table th td tr{
+    color: gray;
+}*/
+
+.wrap-snps {
+    position: relative;
 }
 .td-trials {
     font-size: 17px;
