--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -26,15 +26,20 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="/users/my-appointments">Appointments</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/tools/genetic-data-retinal-diseases">My Genetics</a></li>
+                <li><a href="/tools/my-genetics">My Genetics</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/users/view-results">View Results</a></li>
+                
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="/tools/genetic">23AndMe SNP Table</a></li>
+              {{!-- {{#unless }} --}}
+                <li><a href="/tools/genetic">Connect With 23AndMe</a></li>
                 <li role="separator" class="divider"></li>
+              {{!-- {{/unless}} --}}
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
