--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -52,7 +52,8 @@
         </ul>
         <ul class="nav navbar-nav" style="float: right">
           <li class="text-right">
-            <a href="/users/sign-in" id="login-nav-text" class="navbar-link" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</span></a>
+            <a href="/users/sign-in" id="login-nav-text" class="navbar-link" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</a><i class="fa fa-sign-in" aria-hidden="true"></i>
+
           </li>
           <li class="">
             <a href="/users/sign_up" id="signup-nav-text">SIGNUP</a>
