--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -53,7 +53,7 @@ Trials <span class="caret"></span></a>
                 </ul>
             </li>
             <li class="dropdown">
-            <a href="/users/sign-in" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
+            <a href="/users/dashboard" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
 My Account </a>
               <ul class="dropdown-menu">
                 <li><a href="/users/dashboard">Dashboard</a></li>
