--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -85,7 +85,8 @@
                           
                         </div>
                         
-           <img src="assets/images/mac-cesar.png" style=" padding-top: 20px; margin-left: 30px;  margin-top: 20px">             
+           <img src="assets/images/mac-cesar.png" style=" padding-top: 20px; margin-left: 30px;  margin-top: 20px"> 
+           <img src="https://www.genetrainer.com/static/img/front/v2/content-genetrainer/23andMe_Box_Genetrainer.jpg">            
                         
                     </div><br><br><br>
     <A name="how-it-work-main"></A>
