--- a/public/css/style.css
+++ b/public/css/style.css
@@ -780,6 +780,9 @@ text-align: center;
 
     
 }
+.genotypes-can-do {
+    padding: 100px;
+}
 .treatments-section {
     padding: 75px 0;
     background: white;
